--- a/src/Shared/MyRecipeBook.Exceptions/ResourceMessagesExceptions.fr.resx
+++ b/src/Shared/MyRecipeBook.Exceptions/ResourceMessagesExceptions.fr.resx
@@ -126,13 +126,22 @@
   <data name="EMAIL_INVALID" xml:space="preserve">
     <value>L’adresse que vous avez saisie n’est pas une adresse e-mail valide</value>
   </data>
+  <data name="EMAIL_OR_PASSWORD_INVALID" xml:space="preserve">
+    <value>E-mail et/ou mot de passe invalides</value>
+  </data>
   <data name="NAME_EMPTY" xml:space="preserve">
     <value>Le nom ne peut pas être vide</value>
   </data>
-  <data name="PASSWORD_INVALID" xml:space="preserve">
+  <data name="NO_TOKEN" xml:space="preserve">
+    <value>Jeton invalide</value>
+  </data>
+  <data name="PASSWORD_MUST_BE_THAN_6_CHARACTERS" xml:space="preserve">
     <value>Le mot de passe doit comporter 6 caractères ou plus</value>
   </data>
   <data name="UNKNOWN_ERROR" xml:space="preserve">
     <value>Erreur inconnue</value>
+  </data>
+  <data name="USER_WITHOUT_PERMISSION_ACCESS_RESOURCE" xml:space="preserve">
+    <value>Utilisateur sans autorisation d’accès à cette ressource</value>
   </data>
 </root>
