--- a/src/Shared/MyRecipeBook.Exceptions/ResourceMessagesExceptions.resx
+++ b/src/Shared/MyRecipeBook.Exceptions/ResourceMessagesExceptions.resx
@@ -126,13 +126,31 @@
   <data name="EMAIL_INVALID" xml:space="preserve">
     <value>The address entered is not a valid email</value>
   </data>
+  <data name="EMAIL_OR_PASSWORD_INVALID" xml:space="preserve">
+    <value>E-mail and/ or password invalid</value>
+  </data>
   <data name="NAME_EMPTY" xml:space="preserve">
     <value>The name cannot be empty</value>
   </data>
+  <data name="NO_TOKEN" xml:space="preserve">
+    <value>Invalid Token</value>
+  </data>
+  <data name="PASSWORD_DIFFERENT_CURRENT_PASSWORD" xml:space="preserve">
+    <value>he password entered is different from the current password</value>
+  </data>
+  <data name="PASSWORD_EMPTY" xml:space="preserve">
+    <value>The password cannot be empty</value>
+  </data>
   <data name="PASSWORD_INVALID" xml:space="preserve">
+    <value>The password is invalid</value>
+  </data>
+  <data name="PASSWORD_MUST_BE_THAN_6_CHARACTERS" xml:space="preserve">
     <value>The password must be 6 or more characters long</value>
   </data>
   <data name="UNKNOWN_ERROR" xml:space="preserve">
     <value>Unknown error</value>
+  </data>
+  <data name="USER_WITHOUT_PERMISSION_ACCESS_RESOURCE" xml:space="preserve">
+    <value>User without permission to access this resource</value>
   </data>
 </root>
